# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tekoalyn_kaytto.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
misc/dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  testaus.md  tuntikirjanpito.md  vaativuusmaarittely.md
ohjelma/dokumentaatio/: tuntikirjanpito.md  vaativuusmaarittely.md
src/: .coveragerc  .pylintrc  enemy.py  game.py  gamethingy.py  index.py  install.sh  level.py  menu.py  player.py  pyproject.toml  run.sh  savedata.txt  scores.py  tasks.py
src/data/: savedata.txt  saveload.py  testload.txt  testsave.txt
src/services/: character.py  enemy.py  fighting.py  resources.py  saveload.py  upgrades.py
src/tests/: character_test.py  enemy_test.py  fighting_test.py  game_test.py  level_test.py  player_test.py  resources_test.py  saveload_test.py  scores_test.py  upgrades_test.py
src/ui/: ui.py
