[project]
name = "peli"
version = "0.1.0"
description = ""
authors = [
    {name = "tassu60kg",email = "159922849+tassu60kg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "^7.13.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
